--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página Simples</title>
 </head>
-<body style="background-color: brown;color:#fff">    
-    <p>Esta é uma página HTML simples publicada via GitHub Codespaces!</p>
-
-    <br> 
-    <h1>Rapaz, não é que funciona</h1>
+<body style="background-color: brown;color:#fff">         
+    <h1>Esta é uma página HTML simples publicada via GitHub Codespaces!</h1>
 </body>
 </html>
